--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 <body>
   <canvas id='canvas' width='400' height='400'></canvas>
 
-  <form onsubmit='return false' oninput='samples_value.value = samples.valueAsNumber'>
-    <label for='samples'>Samples:</label>
-    <input id='samples' name='samples' type='range' min='1' max='15' step='1' value='1'>
-    <output for='samples' name='samples_value'>1</output>
+  <form onsubmit='return false' oninput='angle_value.value = angle.valueAsNumber'>
+    <label for='angle'>Angle Threshold:</label>
+    <input id='angle' name='angle' type='range' min='1' max='90' step='0.5' value='30'>
+    <output for='angle' name='angle_value'>30</output>
   </form>
 
   <script type='text/javascript' src='js/point.js'></script>
+  <script type='text/javascript' src='js/edge.js'></script>
+  <script type='text/javascript' src='js/box.js'></script>
+  <script type='text/javascript' src='js/path.js'></script>
+  <script type='text/javascript' src='js/shape.js'></script>
+  <script type='text/javascript' src='js/pathgen.js'></script>
+  <script type='text/javascript' src='js/renderer.js'></script>
   <script type='text/javascript' src='js/index.js'></script>
 </body>
 </html>
