Added README link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
   <canvas id='canvas' width='400' height='400'></canvas>
 
+  <p>See <a href='https://github.com/sunjay/pathgenerator/blob/gh-pages/README.md'>README.md</a> for more information.</p>
+
   <script type='text/javascript' src='js/point.js'></script>
   <script type='text/javascript' src='js/edge.js'></script>
   <script type='text/javascript' src='js/box.js'></script>
